--- a/public/stylesheets/login.scss
+++ b/public/stylesheets/login.scss
@@ -67,8 +67,6 @@
     width: 100%;
     text-align: center;
     margin-top: 40px;
-
-
     .form-group {
       margin: 50px 0 80px;
       button {
@@ -106,7 +104,7 @@
   .group {
     position: relative;
     margin: 40px auto;
-    width: 350px;
+    width: 330px;
     display: flex;
     flex-direction: column;
 
@@ -122,10 +120,9 @@
       color: #f5f1a9;
     }
     textarea {
-      height: auto;
       min-height: 40px;
     }
-    input:focus {
+    input:focus , textarea:focus {
       outline: none;
     }
     input.file {
@@ -303,4 +300,22 @@ input:focus ~ .highlight, textarea:focus ~ .highlight {
 input.cover.yourClass, input.cover{
   margin: 0 auto;
   width: 15px !important;
+}
+
+button {
+  cursor: pointer;
+  letter-spacing: 1px;
+  background: rgba(0,0,0,0.3);
+  border: 2px solid rgba(179, 176, 122, 0.55);
+  color: #f5f1a9;
+  outline: none;
+  padding: 0 30px;
+  line-height: 44px;
+  height: auto;
+  border-radius: 30px;
+  width: auto;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 500;
+
 }
