--- a/views/addSection.ejs
+++ b/views/addSection.ejs
@@ -33,7 +33,7 @@
                                 <img src="/public/images/pic.svg" alt="">
                             </div>
                             <label class="btn btn-primary">
-                                Upload<input type="file" name = "file" class="uploadFile img" value="Upload Photo"
+                                Upload<input type="file" name = "file" accept="image/*" class="uploadFile img" value="Upload Photo"
                                              style="width: 0px;height: 0px;overflow: scroll;">
                             </label>
                             <div class="group file">
@@ -41,7 +41,7 @@
                                 <span class="highlight file"></span>
                                 <span class="bar file"></span>
                                 <label class="file">Name</label>
-                                <input class="cover" type="radio" name="cover" value="0">
+                                <input class="cover" type="radio" name="cover" value="0" checked>
                             </div>
                         </div><!-- col-2 -->
                         <i class="fa fa-plus imgAdd"></i>
