--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,10 +4,9 @@
             <a href="https://vk.com/a_malikova" target="_blank">Aygul Malikova</a>
         </h4>
     </div>
-
 </footer>
 
-<script type="text/javascript" src="/public/javascripts/jquery.uploadPreview.min.js"></script>
-<script type="text/javascript" src="/public/javascripts/main.js"></script>
+<!--<script type="text/javascript" src="/public/javascripts/jquery.uploadPreview.min.js"></script>-->
+<!--<script type="text/javascript" src="/public/javascripts/main.js"></script>-->
 
-</body>
+<!--</body>-->
