--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -241,6 +241,18 @@ body > * {
 }
 
 //*********************
+.row.about {
+}
+.edit {
+  margin-left: 5px;
+  display: inline-block;
+  width: 5%;
+  height: 60px;
+  img {
+    width: 50px;
+    height: 50px;
+  }
+}
 .info {
   position: relative;
   display: flex;
@@ -254,6 +266,9 @@ body > * {
     box-shadow: 9px 10px 60px 67px #e2e2e2;
 
     h1 {
+      display: inline-block;
+      width: 90%;
+      margin: 0 auto;
       font-size: 50px;
       text-align: center;
       text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
