--- a/views/addSection.ejs
+++ b/views/addSection.ejs
@@ -1,6 +1,22 @@
-<% include partials/header.ejs%>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Stalem</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/public/stylesheets/styles.css">
+    <link rel="stylesheet" href="/public/stylesheets/login.css">
+    <link rel="stylesheet" href="/public/stylesheets/nav.css">
+</head>
+<body>
 
-<img src="/public/images/hero.jpg" class="bg"/>
+<% include partials/nav.ejs%>
+
+<img src="/public/images/hero.jpg" class="bg" alt=""/>
 <div class="content">
     <div class="header">
         <div class="caption">
@@ -66,3 +82,8 @@
 </script>
 
 <% include partials/footer.ejs%>
+
+<script type="text/javascript" src="/public/javascripts/jquery.uploadPreview.min.js"></script>
+<script type="text/javascript" src="/public/javascripts/newSection.js"></script>
+
+</body>
