--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,19 @@
-<% include partials/header.ejs%>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Stalem</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/public/stylesheets/styles.css">
+    <link rel="stylesheet" href="/public/stylesheets/login.css">
+    <link rel="stylesheet" href="/public/stylesheets/nav.css">
+</head>
+<body>
 
-<img src="/public/images/hero.jpg" class="bg"/>
+<% include partials/nav.ejs%>
+
+<img src="/public/images/hero.jpg" class="bg" alt=""/>
 <div class="content">
     <div class="header">
         <div class="caption">
@@ -35,6 +48,6 @@
     </div>
 </div>
 
-
-
 <% include partials/footer.ejs%>
+<script type="text/javascript" src="/public/javascripts/nav.js"></script>
+</body>
