--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,6 +1,21 @@
-<% include partials/header.ejs %>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Stalem</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/public/stylesheets/styles.css">
+    <link rel="stylesheet" href="/public/stylesheets/login.css">
+    <link rel="stylesheet" href="/public/stylesheets/nav.css">
+    <link rel="stylesheet" href="/public/stylesheets/portfolio.css">
+</head>
+<body>
 
-
+<% include partials/nav.ejs%>
 <div class="content portfolio container-fluid">
     <div class="row">
         <div class="col col-3">
@@ -63,7 +78,7 @@
                                         <% } %>
                                     </ol>
 
-                                    <div class="card card-block bg-faded">
+                                    <div class="container card card-block bg-faded">
                                         <% for (var k = 0; k < section.pictures[current].comments.length; k++) { %>
                                             <hr>
                                             <div class="row">
@@ -74,7 +89,7 @@
                                                     </strong>
                                                     <span class="pull-right date">
                                                 <%= section.pictures[current].comments[k].date%>
-                                            </span>
+                                                    </span>
                                                     <p class="text">
                                                         <%= section.pictures[current].comments[k].text%>
                                                     </p>
@@ -87,7 +102,7 @@
 
 
                                     <div class="form">
-                                        <form action="/addComment/<%= current._id%>" class="form form-inline" method="POST" autocomplete="off">
+                                        <form action="/addComment/<%= section.pictures[current]._id%>" class="form form-inline" method="POST" autocomplete="off">
                                             <div class="group comment">
                                                 <textarea type="text" name="text" required></textarea>
                                                 <span class="highlight"></span>
@@ -118,5 +133,9 @@
     </div>
 </div>
 
+<% include partials/footer.ejs%>
 
-<% include partials/footer.ejs %>
+<script type="text/javascript" src="/public/javascripts/nav.js"></script>
+<script type="text/javascript" src="/public/javascripts/portfolio.js"></script>
+
+</body>
