--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -1,4 +1,17 @@
-<% include partials/header.ejs %>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Stalem</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/public/stylesheets/styles.css">
+    <link rel="stylesheet" href="/public/stylesheets/login.css">
+    <link rel="stylesheet" href="/public/stylesheets/nav.css">
+</head>
+<body>
+
+<% include partials/nav.ejs%>
 
 <img src="/public/images/hero.jpg" class="bg"/>
 <div class="header">
@@ -39,4 +52,5 @@
     </div>
 </div>
 
-<% include partials/footer.ejs %>
+<% include partials/footer.ejs%>
+</body>
